2003-06-28  Kazu Hirata  <kazu@cs.umass.edu>

	* builtins.c: Follow spelling conventions.
	* cgraph.c: Likewise.
	* cpplex.c: Likewise.
	* config/arm/arm.c: Likewise.
	* config/arm/iwmmxt.md: Likewise.
	* config/c4x/c4x-modes.def: Likewise.
	* config/c4x/c4x.c: Likewise.
	* config/c4x/c4x.h: Likewise.
	* config/c4x/c4x.md: Likewise.
	* config/i386/i386-interix.h: Likewise.
	* config/mips/mips.h: Likewise.

2003-06-28  Neil Booth  <neil@daikokuya.co.uk>

	* config/m68k/m68k.h (TARGET_CPU_CPP_BUILTINS): Predicate
	__mc68020__ on TARGET_68020.

2003-06-28  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c: Fix a comment typo.

2003-06-28  Nathan Sidwell  <nathan@codesourcery.com>

	* c-parse.in (yylexstring): Use a location_t.

	* diagnostic.h (diagnostic_set_info): Replace file and lineno
	parameters with a location_t.
	* diagnostic.c (diagnostic_set_info): Replace file and lineno
	parameters with a location_t.
	(inform, warning, pedwarn, error, sorry, fatal_error,
	internal_error, warning_with_decl, pedwarn_with_decl,
	error_with_decl): Adjust.
	* c-error.c (pedwarn_c99): Adjust.
	* c-format.c (status_warning): Adjust.
	* rtl-error.c (file_and_line_for_asm): Rename to ...
	(location_for_asm): Return a location_t.
	(diagnostic_for_asm): Adjust.

2003-06-28  Neil Booth  <neil@daikokuya.co.uk>

	* cpptrad.c (skip_macro_block_comment): New.
	(copy_comment): Use it if appropriate.

2003-06-28  Kazu Hirata  <kazu@cs.umass.edu>

	* gcse.c (compute_ld_motion_mems): Use INSN_P instead of its
	definition.
	(store_killed_in_insn): Likewise.
	* print-rtl.c (print_rtx): Likewise.
	* config/frv/frv.c (frv_final_prescan_insn): Likewise.
	* config/m68hc11/m68hc11.c (dead_register_here): Likewise.
	(m68hc11_reassign_regs): Likewise.
	(m68hc11_reorg): Likewise.

2003-06-28  Gabriel Dos Reis <gdr@integrable-solutions.net>

	* diagnostic.c (output_integer_with_precision): New macro.
	(output_format): Use it.  Handle more format specifiers.
	(output_long_decimal): Remove.